# rust-rule-engine

./: .env.example  AGENTS.md  ANALYTICS_IMPLEMENTATION.md  BACKWARD_CHAINING_ARCHITECTURE.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CHANGELOG_v0.10.0.md  CHANGELOG_v1.8.0.md  CHANGELOG_v1.9.0.md  CLIPS_FEATURES_ANALYSIS.md  CLIPS_INSPIRED_FEATURES.md  Cargo.toml  ENGINE_COMPARISON.md  EXAMPLE_TEST_REPORT_v1.19.3.md  IMPLEMENTATION_SUMMARY.md  ITERATION_COMPLETE.md  LICENSE  Makefile  PARALLEL_BENCHMARKS.md  PARSER_UNWRAP_FIXES.md  PROJECT_CREATED.txt  PUBLISH.md  QUICK_START_ENGINES.md  README.md  README.md.backup  RELEASE_v0.10.0.md  RETE_ARCHITECTURE.md  RETE_AUTO_NETWORK_DESIGN.md  RETE_DROOLS_IMPROVEMENTS.md  RETE_IMPLEMENTATION_PLAN.md  RETE_UL_ARCHITECTURE.md  RETE_VS_PARALLEL_COMPARISON.md  TEST_RESULTS.md  VERSION_1.19.3_RELEASE_NOTES.md  demo_rest_api.sh  pattern_matching_implementation_plan.md  quick_parallel_bench.sh  run_benchmarks.sh  test_backward_examples.sh  test_in_operator.grl  (+3 more)
.github/workflows/: rust.yml
benches/: README.md  advanced_optimizations_benchmark.rs  advanced_rete_analysis.rs  alpha_indexing_benchmark.rs  backward_chaining_benchmarks.rs  backward_chaining_index_benchmark.rs  clone_optimization_benchmark.rs  concurrent_access_test.rs  engine_comparison_benchmark.rs  literal_search_benchmarks.rs  memory_usage_benchmark.rs  parallel_benchmarks.rs  rete_1m_rules_benchmark.rs  rete_2000_test.rs  rete_comparison_benchmarks.rs  rete_optimization_benchmark.rs  rete_simple_benchmark.rs  rule_engine_benchmarks.rs  rule_updates_test.rs  streaming_test.rs
docs/: API_REFERENCE.md  BACKWARD_CHAINING_DESIGN.md  BACKWARD_CHAINING_IMPLEMENTATION_PLAN.md  BACKWARD_CHAINING_QUICK_START.md  CYCLIC_IMPORT_DETECTION.md  DOCUMENTATION_STRUCTURE.md  GRL_QUERY_SYNTAX.md  GRL_SYNTAX.md  MODULE_PARSING_GUIDE.md  PARSER_CHEAT_SHEET.md  PERFORMANCE.md  PLUGINS.md  README.md  REAL_AI_INTEGRATION.md  REDIS_STATE_BACKEND.md  RETE_GUIDE.md  ROADMAP.md  STREAMING_ARCHITECTURE.md  STREAM_OPERATORS.md  distributed_architecture.md  distributed_explained.md  distributed_features_guide.md
docs/advanced-features/: ADVANCED_USAGE.md  PROOF_GRAPH_CACHING.md  README.md  RETE_OPTIMIZATION.md  RETE_OPTIMIZATION_BENCHMARKS.md  STREAMING.md
docs/api-reference/: GRL_QUERY_SYNTAX.md  README.md
docs/core-features/: FEATURES.md  GRL_SYNTAX.md  README.md
docs/examples/: README.md
docs/getting-started/: CONCEPTS.md  FIRST_RULES.md  INSTALLATION.md  QUICK_START.md
docs/guides/: BACKWARD_CHAINING_RETE_INTEGRATION.md  MODULE_REFACTORING.md  README.md  TROUBLESHOOTING.md
docs/planning/: ALPHA_MEMORY_INDEXING.md  PARALLEL_BETA_JOIN.md  PERSISTENT_RETE_NETWORK.md  RULE_COMPILATION_DECISION.md  RULE_COMPILATION_JIT.md  RULE_COMPILATION_POC_RESULTS.md
examples/: README.md  accumulate_grl_full.rs  action_handlers_demo.rs  action_handlers_grl_demo.rs  advanced_dependency_demo.rs  advanced_method_calls.rs  advanced_plugins_demo.rs  advanced_plugins_showcase.rs  advanced_workflow_demo.rs  ai_functions_in_when.rs  ai_powered_rules.rs  ai_rest_api.rs  ai_rest_api_production.rs  analytics_demo.rs  builder_test.rs  builtin_plugins_demo.rs  complete_speedup_demo.rs  conflict_resolution_demo.rs  coverage_example.rs  custom_functions_demo.rs  debug_conditions.rs  debug_no_loop.rs  dependency_analysis_test.rs  distributed_concept_demo.rs  distributed_demo.rs  distributed_vs_single_demo.rs  ecommerce.rs  expression_demo.rs  famicanxi_eligibility_test.rs  famicanxi_grl_test.rs  famicanxi_rete_test.rs  famicanxi_rules.grl  famicanxi_rules_simple.grl  financial_stress_test.rs  fraud_detection.rs  function_calls_demo.rs  generic_method_calls.rs  grl_no_loop_demo.rs  grule_demo.rs  in_operator_demo.grl  (+60 more)
examples/01-getting-started/: README.md  advanced_method_calls.rs  expression_demo.rs  fraud_detection.rs  generic_method_calls.rs  grule_demo.rs  in_operator_demo.rs  inline_rules_demo.rs  method_calls_demo.rs  simple_pattern_matching_grl.rs  string_methods_demo.rs
examples/02-rete-engine/: README.md  multifield_demo.rs  rete_call_function_demo.rs  rete_deffacts_demo.rs  rete_demo.rs  rete_grl_demo.rs  rete_memoization_demo.rs  rete_multifield_demo.rs  rete_parse_demo.rs  rete_template_globals_demo.rs  rete_typed_facts_demo.rs  tms_demo.rs
examples/03-advanced-features/: README.md  accumulate_demo.rs  accumulate_grl_demo.rs  action_handlers_demo.rs  action_handlers_grl_demo.rs  conflict_resolution_demo.rs  custom_functions_demo.rs  grl_no_loop_demo.rs  no_loop_demo.rs  (+17 more)
iot-farm-monitoring/: .gitignore  Cargo.toml  GETTING_STARTED.md  INTEGRATED_FARM_GUIDE.md  INTEGRATION.md  Makefile  PROJECT_GUIDE.md  PROJECT_UPDATE.txt  README.md  SUMMARY.md  config.toml  docker-compose.yml
iot-farm-monitoring/examples/: basic_demo.rs  comprehensive_farm_demo.rs  grl_stream_demo.rs  kafka_consumer.rs  test_grl_rules.rs  test_stream_grl.rs
iot-farm-monitoring/examples/advanced/: integrated_farm_demo.rs
iot-farm-monitoring/grl_rules/: README.md  aquaculture_monitoring.grl  farm_monitoring_multistream.grl  integrated_farm_rules.grl  stream_aquaculture.grl  stream_climate_control.grl  stream_demo_WORKING.grl  stream_greenhouse_monitoring.grl  vegetable_monitoring.grl
iot-farm-monitoring/scripts/: produce_events.sh  setup_kafka.sh
iot-farm-monitoring/src/: config.rs  events.rs  events_extended.rs  grl_stream_adapter.rs  lib.rs  main.rs  monitor.rs  monitor_extended.rs  stream_grl_loader.rs  stream_rule_processor.rs  working_memory.rs
iot-farm-monitoring/src/kafka/: consumer.rs  mod.rs
iot-farm-monitoring/tests/: integration_tests.rs
src/: errors.rs  expression.rs  lib.rs  main.rs  types.rs
tests/: backward_comprehensive_tests.rs  backward_thread_safety.rs  backward_tms_integration.rs  grl_cases.yml  grl_harness.rs  grl_harness_data.rs  grl_parser_integration_test.rs  integration_tests.rs  proof_graph_integration_test.rs  rete_performance_test.rs  rete_smoke.rs  stream_end_to_end_test.rs  stream_integration_test.rs  stream_join_tests.rs  test_module_system.rs  test_search_multiple_solutions.rs  tms_test.rs
(+225 files in other folders)
