[package]
name = "rust-rule-engine"
version = "1.2.0"
edition = "2021"
authors = ["Ton That Vu <ttvuhm@gmail.com>"]
description = "A high-performance rule engine for Rust with RETE-UL algorithm (2-24x faster), CLIPS-inspired features, Parallel Execution, and Production-Ready Backward Chaining with 100-1000x speedup via O(1) Conclusion Index"
license = "MIT"
readme = "README.md"
repository = "https://github.com/KSD-CO/rust-rule-engine"
documentation = "https://docs.rs/rust-rule-engine"
keywords = ["rules", "engine", "grl", "ai", "ml"]
categories = ["algorithms", "data-structures", "science"]
exclude = [
    "tests/*",
    ".github/*",
    "benchmarks/*",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
thiserror = "1.0"
num_cpus = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
petgraph = { version = "0.6", optional = true }
fastrand = "2.0"
once_cell = "1.0"

[features]
default = []
streaming = ["tokio", "futures"]
backward-chaining = ["petgraph"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["full"] }
# REST API dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
# AI API dependencies
reqwest = { version = "0.11", features = ["json"] }
serde_yaml = "0.9"

# Core benchmarks (keep these - used for performance testing)
[[bench]]
name = "rule_engine_benchmarks"
harness = false

[[bench]]
name = "parallel_benchmarks"
harness = false

[[bench]]
name = "rete_comparison_benchmarks"
harness = false

[[bench]]
name = "backward_chaining_benchmarks"
harness = false
required-features = ["backward-chaining"]

# Optional benchmarks (can run manually if needed)
# [[bench]]
# name = "rete_simple_benchmark"
# harness = false

# [[bench]]
# name = "concurrent_access_test"
# harness = false

# [[bench]]
# name = "rule_updates_test"
# harness = false

# [[bench]]
# name = "streaming_test"
# harness = false

# [[bench]]
# name = "advanced_rete_analysis"
# harness = false

# [[bench]]
# name = "rete_2000_test"
# harness = false

# Binary for large-scale testing
[[bin]]
name = "rete_1m_rules_benchmark"
path = "benches/rete_1m_rules_benchmark.rs"

# Example programs (useful for documentation)
[[example]]
name = "fraud_detection"
path = "examples/01-getting-started/fraud_detection.rs"

[[example]]
name = "grule_demo"
path = "examples/01-getting-started/grule_demo.rs"

# Backward chaining examples
[[example]]
name = "simple_query_demo"
path = "examples/09-backward-chaining/simple_query_demo.rs"
required-features = ["backward-chaining"]

[[example]]
name = "medical_diagnosis_demo"
path = "examples/09-backward-chaining/medical_diagnosis_demo.rs"
required-features = ["backward-chaining"]

[[example]]
name = "detective_system_demo"
path = "examples/09-backward-chaining/detective_system_demo.rs"
required-features = ["backward-chaining"]

[[example]]
name = "multiple_solutions_demo"
path = "examples/09-backward-chaining/multiple_solutions_demo.rs"
required-features = ["backward-chaining"]

[[example]]
name = "grl_query_demo"
path = "examples/09-backward-chaining/grl_query_demo.rs"
required-features = ["backward-chaining"]

[[example]]
name = "unification_demo"
path = "examples/09-backward-chaining/unification_demo.rs"
required-features = ["backward-chaining"]

[[example]]
name = "ecommerce_approval_demo"
path = "examples/09-backward-chaining/ecommerce_approval_demo.rs"
required-features = ["backward-chaining"]

[[example]]
name = "purchasing_flow_demo"
path = "examples/09-backward-chaining/purchasing_flow_demo.rs"
required-features = ["backward-chaining"]

[[example]]
name = "loan_approval_demo"
path = "examples/09-backward-chaining/loan_approval_demo.rs"
required-features = ["backward-chaining"]

[[example]]
name = "family_relations_demo"
path = "examples/09-backward-chaining/family_relations_demo.rs"
required-features = ["backward-chaining"]

[[example]]
name = "access_control_demo"
path = "examples/09-backward-chaining/access_control_demo.rs"
required-features = ["backward-chaining"]

[[example]]
name = "product_recommendation_demo"
path = "examples/09-backward-chaining/product_recommendation_demo.rs"
required-features = ["backward-chaining"]

[[example]]
name = "rete_index_demo"
path = "examples/09-backward-chaining/rete_index_demo.rs"
required-features = ["backward-chaining"]

# Backward chaining test suites
[[example]]
name = "comprehensive_backward_test"
path = "examples/09-backward-chaining/comprehensive_backward_test.rs"
required-features = ["backward-chaining"]

[[example]]
name = "backward_edge_cases_test"
path = "examples/09-backward-chaining/backward_edge_cases_test.rs"
required-features = ["backward-chaining"]

[[example]]
name = "backward_critical_missing_tests"
path = "examples/09-backward-chaining/backward_critical_missing_tests.rs"
required-features = ["backward-chaining"]

[[example]]
name = "module_demo"
path = "examples/10-module-system/module_demo.rs"

[[example]]
name = "smart_home_modules"
path = "examples/10-module-system/smart_home_modules.rs"

[[example]]
name = "test_grl_parser"
path = "examples/10-module-system/test_grl_parser.rs"

